Sources/frontend/src/styles/globals.css
/**
 * @file    globals.css
 *
 * @author  Michal Majer
 *          Faculty of Information Technology \n
 *          Brno University of Technology \n
 *          xmajer21@stud.fit.vutbr.cz
 *
 * @brief   Global styles for the whole app
 *
 * @date    Day Month Year, Hour:Minute (created)
 *          27 April      2021 20:00 (revised)
 *
 * @section Licence
 * This file is part of the Superscalar simulator app
 * <p>
 * Copyright (C) 2023  Michal Majer
 * <p>
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * <p>
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 * <p>
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 20 14.3% 4.1%;

    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;
 
    --primary: 24 9.8% 10%;
    --primary-foreground: 60 9.1% 97.8%;
 
    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;
 
    --muted: 60 4.8% 95.9%;
    --muted-foreground: 25 5.3% 44.7%;
 
    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;

    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;
    --ring: 20 14.3% 4.1%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 20 14.3% 4.1%;
    --foreground: 60 9.1% 97.8%;
 
    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;
 
    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 97.8%;
 
    --primary: 60 9.1% 97.8%;
    --primary-foreground: 24 9.8% 10%;
 
    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;
 
    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;
 
    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 60 9.1% 97.8%;
 
    --border: 12 6.5% 15.1%;
    --input: 12 6.5% 15.1%;
    --ring: 24 5.7% 82.9%;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer base {
  body {
    font-family: 'Open Sans', sans-serif;
    @apply neutral-bg;
  }

  .neutral-bg {
    @apply bg-neutral-99 text-neutral-10;
  }

  .dotted-bg {
    background-image: radial-gradient(circle at 1px 1px, #cca 1px, transparent 0);
    background-size: 20px 20px;
  }

  p {
    @apply my-2;
  }

  table {
    @apply text-left text-sm text-gray-600;
  }

  thead {
    @apply bg-gray-50 text-xs uppercase text-gray-700;
  }

  thead th {
    @apply px-6 py-3;
  }

  tbody tr {
    @apply border-b bg-white;
  }

  tbody th {
    @apply whitespace-nowrap px-6 py-4 font-medium text-gray-900;
  }

  /* Source: https://helplogger.blogspot.com/2013/10/css-keyboard-keys-on-blogger.html */
  kbd {
    border: 1px solid gray;
    box-shadow:
      1px 0 1px 0 #eee,
      0 2px 0 2px #ccc,
      0 2px 0 3px #666;
    border-radius: 3px;
    margin: 2px 3px;
    padding: 2px 5px;
  }

  .small-container {
    @apply mx-auto w-full xl:w-[1200px];
  }

  .heading-underline {
    @apply decoration-primary-40 dark: decoration-primary-80 underline decoration-4 underline-offset-[5px];
  }

  .primary-text {
    @apply text-primary-20 dark:text-primary-70;
  }

  
  .button-interactions {
    @apply bg-gray-100 duration-100 hover:cursor-pointer hover:bg-gray-200 active:button-active;
  }

  .button-active {
    @apply bg-gray-400;
  }

  .button-colors {
    @apply enabled:button-interactions bg-gray-200 disabled:cursor-not-allowed;
  }

  /* padding around text */
  .button-shape {
    @apply px-4 py-2;
  }

  .button {
    @apply button-colors button-shape rounded-md border;
  }

  .small-button {
    @apply button-colors rounded-md px-2 py-1 text-sm;
  }

  /* inter var - latin */
  @font-face {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 100 900;
    font-display: optional;
    src: url('/fonts/inter-var-latin.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
      U+2215, U+FEFF, U+FFFD;
  }

  /* #region  /**=========== Typography =========== */
}

@layer components {
  .cm-line {
    background-color: rgba(var(--line-highlight-color), 0.13);
    position: relative;
  }

  /* add a rectangle :before */
  .cm-line::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 0.3rem;
    height: 100%;
    background-color: rgba(var(--line-highlight-color), 0.38);
  }

  .cm-line.code_highlight_red {
    --line-highlight-color: 240, 5, 0;
  }

  .cm-line.code_highlight_green {
    --line-highlight-color: 0, 255, 0;
  }

  .cm-line.code_highlight_blue {
    --line-highlight-color: 0, 0, 255;
  }

  .cm-line.code_highlight_yellow {
    --line-highlight-color: 255, 255, 0;
  }

  .cm-line.code_highlight_orange {
    --line-highlight-color: 255, 165, 0;
  }

  .cm-line.code_highlight_pink {
    --line-highlight-color: 255, 100, 233;
  }
}

@layer utilities {
  .animated-underline {
    background-image: linear-gradient(#33333300, #33333300),
      linear-gradient(
        to right,
        var(--color-primary-400),
        var(--color-primary-500)
      );
    background-size:
      100% 2px,
      0 2px;
    background-position:
      100% 100%,
      0 100%;
    background-repeat: no-repeat;
  }

  @media (prefers-reduced-motion: no-preference) {
    .animated-underline {
      transition: 0.3s ease;
      transition-property: background-size, color, background-color,
        border-color;
    }
  }

  .animated-underline:hover,
  .animated-underline:focus-visible {
    background-size:
      0 2px,
      100% 2px;
  }

  /* Tooltip - behavior only */

  .tooltip {
    @apply relative;
  }

  /* styling the tooltip */
  .tooltiptext {
    @apply absolute z-10 min-w-max;
  }

  .show-tooltip-right {
    @apply left-full top-0 ml-2;
  }

  .show-tooltip-bottom {
    @apply top-full left-0 mt-2;
  }

  /* Tooltip text */
  .tooltip .tooltiptext {
    @apply invisible opacity-0 delay-300;
  }

  /* Show the tooltip text when you mouse over the tooltip container */
  .tooltip:hover .tooltiptext {
    @apply visible opacity-100;
  }

  /* Form */
  .form-input {
    @apply block w-full rounded-lg border border-gray-300 bg-gray-50 p-2 text-gray-900 focus:border-blue-500 focus:ring-blue-500 sm:text-xs;
  }

  .form-input.error {
    @apply border-red-500 bg-red-50 text-red-900 placeholder-red-700 focus:border-red-500 focus:ring-red-500;
  }

  /* folding */
  .foldable-content {
    @apply hidden;
  }

  input:checked ~ .foldable-content {
    @apply block;
  }

  .radio-selected {
    @apply bg-background text-foreground shadow-sm;
  }

  /* radio input */
  /* Source: https://thestizmedia.com/radio-buttons-as-toggle-buttons-with-css/ */
  .radio-field input[type='radio']:checked + label {
    @apply radio-selected;
  }

  /* schemaLine */

  .schemaLine {
    stroke: black;
    stroke-width: 2px;
  }

  /* dropdown bubble - style only */
  .dropdown-bubble {
    @apply flex w-48 flex-col divide-y rounded border bg-white;
  }

  /* instruction hover */
  /* .instruction-tooltip */

  .cm-tooltip {
    @apply rounded bg-gray-200 p-1;
  }

  .tooltip-name {
    @apply font-bold;
  }

  /* Timeline button + press animation */

  .iconHighlight {
    @apply duration-100 hover:bg-gray-200 active:bg-gray-300;
  }

  /* Icon highlight */
  .timelineHighlight {
    @apply duration-100 hover:bg-black/10;
  }

  .tlbutton-animation-outer {
    @apply bg-gray-300;
  }

  .tlbutton-animation-inner {
    transform: translateY(2px);
  }

  /* Right pointing red arrow */

  .rectangle::after {
    @apply border-l-red-500 border-y-transparent border-r-transparent absolute top-0 left-full;
    content: "";
    border-width: 0.5rem 0 0.5rem 0.5rem;
  }

  /* FU Configuration table */
  .fu-grid {
    @apply grid gap-x-4 gap-y-1 justify-center;
    grid-template-columns: auto auto 1fr auto;
  }

  /* Simulation view grid */
  .sim-grid {
    @apply inline-grid gap-4 justify-center;
    grid-auto-columns: 1fr;
    grid-auto-rows: auto;
  }

  .col-grid {
    @apply flex gap-4 justify-center m-4;
  }

  .global-grid {
    @apply grid justify-items-start items-start gap-4  mt-16;
    grid-template-columns: repeat(2, max-content);
  }

  .program {
    @apply w-full h-full;
    grid-column: 1 / span 1;
    grid-row: 1 / span 3;
  }

  .fetch {
    grid-column: 2 / span 1;
    grid-row: 1 / span 2;
  }

  .decode {
    grid-column: 2 / span 1;
    grid-row: 3 / span 2;
  }

  .rob {
    grid-column: 3 / span 1;
    grid-row: 1 / span 5;
  }

  .aluIssue {
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
  }

  /* FUs also define tailwind class for positioning in a row */
  .aluFu {
    grid-column: 1 / span 1;
    grid-row-end: span 1;
  }

  .fpIssue {
    grid-column: 2 / span 1;
    grid-row: 1 / span 1;
  }

  .fpFu {
    grid-column: 2 / span 1;
    grid-row-end: span 1;
  }

  .branchIssue {
    grid-column: 3 / span 1;
    grid-row: 1 / span 1;
  }

  .branchFu {
    grid-column: 3 / span 1;
    grid-row-end: span 1;
  }



  .storeBuffer {
    grid-column: 1 / span 2;
    grid-row: 1 / span 2;
  }

  .loadBuffer {
    grid-column: 3 / span 2;
    grid-row: 1 / span 2;
  }

  .memory-grid {
    grid-template-columns: repeat(9, max-content);
  }

  .memory-grid *:first-child {
    margin-right: 0.5em;
  }

  .memory-grid *:nth-child(5) {
    margin-right: 0.5em;
  }
  
  /* cache subgrid */
  .cache-grid {
    @apply grid justify-center;
    grid-template-columns: repeat(3, max-content);
    grid-auto-rows: auto;
  }

  .cache-line {
    @apply grid;
    grid-row: span 2;
    grid-column: span 3;
    grid-template-columns: subgrid;
    grid-template-rows: repeat(2, 1fr);
  }

  .cache-lines-cont {
    @apply grid;
    grid-column: span 2;
    grid-template-columns: subgrid;
    grid-template-rows: subgrid;
  }
}

